--- a/configs/led.yaml
+++ b/configs/led.yaml
@@ -60,27 +60,31 @@ model:
 
 data:
   dataset_name: "alexfabbri/multi_news"
-  max_input_length: 4096   # shortened for memory
+  max_input_length: 8192   # shortened for memory
   max_output_length: 512
   batch_size: 2
   num_workers: 4
   sample_ratio: 1.0
   remove_stopwords: false
+  dedup: True
+  dedup_threshold: 0.5
+
 
 training:
-  epochs: 3
-  lr: 3e-05
+  epochs: 2
+  lr: 2e-05
   warmup_steps: 500
   weight_decay: 0.01
-  fp16: false
+  fp16: true
   log_interval: 50
   seed: 42
 
 generation:
   num_beams: 4
-  length_penalty: 1.0
-  min_length: 5
-  no_repeat_ngram_size: 2
+  length_penalty: 2.0
+  min_length: 50
+  max_length: 512
+  no_repeat_ngram_size: 3
   early_stopping: true
 
 output:
@@ -89,4 +93,7 @@ output:
 ddp:
   backend: "nccl"
   init_method: "env://"
-  world_size: 1
+  world_size: 4
+
+evaluation:
+  bootstrap_iters: 100
